<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000">

    <LinearLayout
        android:layout_width="580dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@drawable/version_popup_03"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_wifi_network_setup_prompts"
            android:textColor="#2eb6aa"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sign_attention_dis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dialog_wifi_network_setup_tips"
                android:textColor="#ff6600"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/image_dialog_button"
                    android:gravity="center"
                    android:text="@string/dialog_wifi_cancel"
                    android:textColor="#2eb6aa"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/image_dialog_button"
                    android:gravity="center"
                    android:text="@string/dialog_wifi_setting"
                    android:textColor="#2eb6aa"
                    android:textSize="24sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

