<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8000000"
    android:gravity="center">

    <!-- 【必设】升级标题控件tag：beta_title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="beta_title"
        android:visibility="gone" />

    <!-- 【必设】升级信息控件tag：beta_upgrade_info-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="beta_upgrade_info"
        android:visibility="gone" />

    <!-- 【必设】更新属性控件tag：beta_upgrade_feature-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="beta_upgrade_feature"
        android:visibility="gone" />

    <!-- 【必设】取消按钮tag：beta_cancel_button-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="beta_cancel_button"
        android:visibility="gone" />

    <!-- 【必设】确认按钮tag：beta_confirm_button-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:tag="beta_confirm_button"-->
    <!--android:visibility="gone" />-->

    <LinearLayout
        android:layout_width="580dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@drawable/version_popup_03"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_upgrade_version_update"
            android:textColor="#2eb6aa"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sign_attention_dis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dialog_upgrade_version_update_tips"
                android:textColor="#ff6600"
                android:textSize="28sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:tag="beta_confirm_button"
                android:background="@drawable/image_dialog_button"
                android:text="@string/dialog_upgrade_update_now"
                android:textColor="#2eb6aa"
                android:textSize="24sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

